<resources>
    <string name="app_name">EContact</string>
    <string name="bat_dau">Bắt đầu</string>
    <string name="truong">TRƯỜNG ĐẠI HỌC SƯ PHẠM KỸ THUẬT HƯNG YÊN</string>
    <string name="thong_tin">Thông tin hồ sơ</string>
    <string name="lop">Lớp: 17.5</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="ho_so">Hồ sơ</string>
    <string name="hoc_tap">Học tập</string>
    <string name="hanh_kiem">Hạnh kiểm</string>
    <string name="lien_he">Liên hệ</string>
    <string name="thong_bao">Thông báo</string>
    <string name="hoc_ky">Học kỳ</string>
    <string name="nam_hoc">Năm học</string>
    <string name="danhsach_thongtin">Danh sách thông tin học phần</string>
    <string name="ma_sinhvien">Mã sinh viên</string>
    <string name="s_tt">STT</string>
    <string name="ten_hocphan">Tên học phần</string>
    <string name="diem_hocphan">Điểm học phần</string>
    <string name="tin_chi">Tín chỉ</string>
    <string name="ghi_chu">Ghi chú</string>
    <string name="ds_thongbao">Danh sách thông báo</string>
    <string name="tt_lien_he">Thông tin liên hệ</string>
    <string name="thongtin_lienhe_cs1">Thông tin liên hệ cơ sở Khoái Châu</string>
    <string name="thongtin_lienhe_cs2">Thông tin liên hệ cơ sở Mỹ Hào</string>
    <string name="thongtin_lienhe_cs3">Thông tin liên hệ cơ sở Hải Dương</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="mat_khau">Mật khẩu</string>

    <string name="xep..loai">Xếp loại học tập:</string>
    <string name="ten..hocphan">Tên học phần:</string>
    <string name="diem..hocphan">Điểm học phần:</string>
    <string name="tin..chi">Tín chỉ:</string>
    <string name="ghi..chu">Ghi chú:</string>
    <string name="ho..ten">Họ tên:</string>
    <string name="ngay..sinh">Ngày sinh:</string>
    <string name="gioi..tinh">Giới tính:</string>
    <string name="dia..chi">Địa chỉ:</string>
    <string name="lop..">Lớp:</string>
    <string name="ma..sinhvien">Mã SV:</string>
    <string name="giao..vien">GVCN:</string>
    <string name="hanh..kiem">Hạnh kiểm:</string>
    <string name="hoc..luc">Học lực:</string>
    <string name="hoc..lucky1">Học lực kỳ 1:</string>
    <string name="hoc..lucky2">Học lực kỳ 2:</string>
    <string name="tim..kiem">Tìm Kiếm:</string>
    <string name="web..site">Website:</string>
    <string name="dien..thoai">Điện thoại:</string>
    <string name="gm..ail">Gmail:</string>
</resources>